# TrayLink

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-release.yml
config/: defaults.json
docs/: cach-su-dung.mov
docs/allow-https/: README.md
scripts/: BUILD.md  build-all.sh  build-macos.sh  build-windows.ps1  sign-dev-macos.sh  sync-dev-app.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/assets/: manifest.webmanifest  remote.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  net.rs  remote_icons.rs  state.rs  tls.rs  uploads.rs
src-tauri/src/api/: auth.rs  client_ip.rs  mod.rs  remote.rs  routes.rs  server.rs  upload.rs
src-tauri/src/apps/: discover.rs  icon.rs  mod.rs  windows_lnk.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/launcher/: browser.rs  browser_profiles.rs  exec_cmd.rs  hotkey.rs  mod.rs  open_app.rs  open_file.rs
src-tauri/src/macos/: accessibility.rs  executor.rs  input.rs  mod.rs
src-tauri/src/shortcuts/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/: AccessibilityPanel.tsx  AllowlistEditor.tsx  AppApiGuide.tsx  AppEditDialog.tsx  AppHotkeyDialog.tsx  AppIcon.tsx  AppPathPicker.tsx  BrowserProfileSelect.tsx  DeckIcon.tsx  DevBanner.tsx  HotkeyIcon.tsx  HotkeyIconPicker.tsx  HotkeyRecorder.tsx  RemoteDeckEditor.tsx  RemoteDeckQrDialog.tsx  RequestLog.tsx  ServerStatus.tsx  SettingsPanel.tsx  deck-dnd.tsx
src/lib/: browser.ts  hotkey-icons.ts  hotkeys.ts  icon-cache.ts  remote-deck.ts  tauri.ts
