[package]
name = "traylink"
version = "0.1.18"
description = "TrayLink - App Launcher with HTTP API"
authors = ["you"]
edition = "2021"

[lib]
name = "traylink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
base64 = "0.22"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.23"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
enigo = "0.2"
